--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -1,1 +1,12 @@
 @import './base.css';
+
+body {
+  padding: 0;
+  margin: 0;
+}
+.drag {
+  -webkit-app-region: drag;
+}
+.not-drag {
+  -webkit-app-region: no-drag;
+}
